init: 编译环境配置
Pub upgrade
Flutter：3.27.2
Kotlin：2.1.20
AGP：8.1.0
Gradle：8.0

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,8 +33,9 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    compileSdkVersion 33
-//    ndkVersion flutter.ndkVersion
+    namespace "com.sixbugs.bujuan"
+    compileSdkVersion 35
+    ndkVersion flutter.ndkVersion
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -55,7 +56,7 @@ android {
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
 //        minSdkVersion flutter.minSdkVersion
-        minSdkVersion 19
+        minSdkVersion flutter.minSdkVersion
         targetSdkVersion 33
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
