--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,144 +1,100 @@
 name: bujuan
-description: A new Flutter project.
-
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
+description: A clean MusicPlayer.
 version: 2.0.4+25
-
 environment:
   sdk: ">=3.0.0"
   flutter: ">=3.0.0"
-
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # 状态管理
   get: ^4.6.5
-  encrypt: ^5.0.1
-  path_provider: ^2.0.15
-  flutter_screenutil: ^5.9.0
-  extended_image: ^8.2.0
-  palette_generator: ^0.3.3+3
-  just_audio: ^0.9.36
-  audio_service: ^0.18.12
+  # 依赖注入
   get_it: ^7.6.0
+  # 路由管理
+  auto_route: ^5.0.4
+
+  # 加密库
+  encrypt: ^5.0.1
+  pointycastle: ^3.7.3
+
+  # 本地存储
+  path_provider: ^2.0.15
+  hive_flutter: ^1.1.0
+
+  #网络库
   dio: ^5.2.1+1
-  qr_flutter: ^4.1.0
-  date_format: ^2.0.7
   pretty_dio_logger: ^1.3.1
   dio_cookie_manager: ^3.1.0
-  pointycastle: ^3.7.3
+  cached_network_image: ^3.3.0
+
+  # 音视频
+  just_audio: ^0.9.36
+  audio_service: ^0.18.12           # 后台播放
+  video_player: ^2.6.1
+  audio_video_progress_bar: ^1.0.1  # 播放进度条
+
+  # 工具库
+  date_format: ^2.0.7
   json_annotation: ^4.8.0
-  flutter_tabler_icons: ^1.1.2
   package_info_plus: ^4.0.2
   url_launcher: ^6.1.11
-  auto_route: ^5.0.4
-  flutter_svg: ^2.0.7
-  fluttertoast: ^8.2.2
-  cached_network_image: ^3.3.0
+  qr_flutter: ^4.1.0
+
+  # 图片查看
+  extended_image: ^8.2.0
+  # 图片主色调提取
+  palette_generator: ^0.3.3+3
+  # 图片选择
+  image_picker: ^0.8.9
+
+  # 动画
   rive: ^0.11.3
   lottie: ^2.4.0
+
+  # 屏幕适配
+  flutter_screenutil: ^5.9.0
+  # tabler图标库
+  flutter_tabler_icons: ^1.1.2
+  # 加载矢量图
+  flutter_svg: ^2.0.7
+  # 显示原生toast
+  fluttertoast: ^8.2.2
+  # 下拉刷新
   pull_to_refresh: ^2.0.0
+  # 通知权限
   notification_permissions: ^0.6.1
-  video_player: ^2.6.1
-  audio_video_progress_bar: ^1.0.1
+  # 跨平台Dialog
   adaptive_dialog: ^1.9.0-0
-  image_picker: ^0.8.9
-  flutter_displaymode: ^0.6.0
+  # 滑动倒计时组件
   slide_countdown: ^0.6.0
+  # 权限请求组件
   permission_handler: ^10.2.0
-  hive_flutter: ^1.1.0
+  # UI 抽屉侧边栏
   flutter_zoom_drawer: ^3.1.1
+
+  # 平台相关
+  # 桌面平台窗口管理（大小、位置）
   window_manager: ^0.3.4
+  # 安卓原生Intent
+  android_intent_plus: ^4.0.1
+  # 设置Android屏幕刷新率模式
+  flutter_displaymode: ^0.6.0
+
 #  flutter_rust_bridge: ^1.77.1
 #  ffi: ^2.0.2
-  android_intent_plus: ^4.0.1
-
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   auto_route_generator: 5.0.3
   build_runner:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   ffigen: ^8.0.2
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-#dependency_overrides:
-#  sky_engine:
-#    path: ../engine/src/out/host_debug_unopt/gen/dart-pkg/sky_engine
-#  smooth:
-#    path: plugins/flutter_smooth/packages/smooth
-# The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
     - assets/lottie/
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  #  fonts:
-  #    - family: iconfont
-  #      fonts:
-  #        - asset: assets/font/iconfont.ttf
-  #    - family: tabler-icons
-  #      fonts:
-  #        - asset: assets/font/tabler.ttf
-  #          style: normal
-  #          weight: 600
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
