--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,8 @@ dependencies:
   android_intent_plus: ^4.0.1
   # 设置Android屏幕刷新率模式
   flutter_displaymode: ^0.6.0
+  # 磨砂容器
+  blurrycontainer: ^2.1.0
 
 #  flutter_rust_bridge: ^1.77.1
 #  ffi: ^2.0.2
