--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,8 @@ dependencies:
   blurrycontainer: ^2.1.0
   # 约束布局
   flutter_constraintlayout: ^1.7.0-stable
+  # 震动
+  vibration: ^3.1.3
 
 #  flutter_rust_bridge: ^1.77.1
 #  ffi: ^2.0.2
@@ -92,6 +94,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  #  自动刷新路由表
+  #  flutter packages pub run build_runner watch
+  #  生成路由代码
+  #  flutter packages pub run build_runner build
   auto_route_generator: 5.0.3
   build_runner:
   flutter_lints: ^2.0.0
