--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,8 @@ dependencies:
   cached_network_image: ^3.3.0
 
   # 音视频
-  just_audio: ^0.9.36
+  just_audio: ^0.9.36               # 音频播放
   audio_service: ^0.18.12           # 后台播放
-  video_player: ^2.6.1
   audio_video_progress_bar: ^1.0.1  # 播放进度条
 
   # 工具库
