--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,8 +54,6 @@ dependencies:
   rive: ^0.11.3
   lottie: ^2.4.0
 
-  # 屏幕适配
-  flutter_screenutil: ^5.9.0
   # tabler图标库
   flutter_tabler_icons: ^1.1.2
   # 加载矢量图
@@ -90,6 +88,7 @@ dependencies:
   vibration: ^3.1.3
   flutter_lyric: ^2.0.4+6
   scrollable_positioned_list: ^0.3.8
+  sliding_up_panel: ^2.0.0+1
 
 #  flutter_rust_bridge: ^1.77.1
 #  ffi: ^2.0.2
