--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,5 +1,10 @@
-org.gradle.jvmargs=-Xmx1536M
+# 设置Gradle JVM参数，增加最大堆内存至4096MB，解决Java堆空间不足问题
+org.gradle.jvmargs=-Xmx4096M
+# 启用AndroidX支持库
 android.useAndroidX=true
+# 启用Jetifier，用于将旧的Support库转换为AndroidX
 android.enableJetifier=true
+# 启用R8代码压缩工具
 android.enableR8=true
+# 指定Android NDK路径
 ANDROID_NDK=/Users/sixbug/Library/Android/sdk/ndk/23.2.8568313
