--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,9 @@ dependencies:
 #  ffi: ^2.0.2
 
   cookie_jar: any
+  flutter_staggered_grid_view: ^0.7.0
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
